--- a/grails-app/assets/stylesheets/table2.css
+++ b/grails-app/assets/stylesheets/table2.css
@@ -18,9 +18,8 @@ th {
 }
 
 .table-three{
-    position: fixed;
+    /*position: fixed;*/
     margin-left:900px;
-
     margin-top: 10px;
 }
 
@@ -28,8 +27,6 @@ th {
     margin-left: 980px;
     margin-top: -50px;
     font-size: 20px;
-
-
     font-family: "Trebuchet MS", Verdana, Geneva, Arial, Helvetica, sans-serif;
     color: #0c5460;
 
