--- a/grails-app/assets/stylesheets/dashboard.css
+++ b/grails-app/assets/stylesheets/dashboard.css
@@ -1,12 +1,16 @@
 
 .table-two{
-    margin-left:300px;
+    margin-left:250px;
     margin-top: 10px;
+}
+.table-spending{
+    margin-top: 9px;
+    margin-left: 850px;
 }
 
 table {
     border-collapse: collapse;
-    width: 60%;
+    width: 40%;
     border: inset thin;
     height: 150px;
 }
@@ -46,8 +50,15 @@ th {
 
 .accountDetail{
     font-size: 20px;
-    margin-left:300px;
+    margin-left:250px;
     margin-top: 120px;
+    font-family: "Trebuchet MS", Verdana, Geneva, Arial, Helvetica, sans-serif;
+    color: black;
+}
+.analyzer{
+    font-size: 20px;
+    margin-left:950px;
+    margin-top: -190px;
     font-family: "Trebuchet MS", Verdana, Geneva, Arial, Helvetica, sans-serif;
     color: black;
 }
